# api/controllers/dog_controller.py
@@ -2,6 +2,7 @@ from model.entities.dog import Dog
 from utils.helper import Helper
 from flask import Blueprint, jsonify, request
 from model.entities.user import User
+from flask import url_for
 
 dog_controller = Blueprint('dog_controller', __name__)
 
@@ -25,16 +26,25 @@ def dog_add():
 
     return jsonify({'message': 'Pet adicionado com sucesso.'}), 201
 
-
-@dog_controller.route("/dog/list/<user_id>", methods=['GET'])
-def dog_list():
+@dog_controller.route("/dog/delete", methods=['POST'])
+def dog_delete():
     
+    required_params = ['dog_id']
+    if not all(param in request.json for param in required_params):
+        return jsonify({'error': 'Alguns parametros nao foram preenchidos corretamente!'}), 400
+
+    dog_id = request.json['dog_id']
+    
+    Dog.delete(dog_id)
+    
+    return jsonify({'message': 'Pet removido com sucesso.'}), 200
+
+
+@dog_controller.route("/dog/list", methods=['GET'])
+def dog_list():
     user_id = request.args.get('user_id')
-
     if not user_id:
-        return jsonify({'error': 'Id do usuario e obrigatorio.'}), 400
-
-    user_id = request.json['user_id']
+        return jsonify({'error': 'O ID do usuario e obrigatorio.'}), 400
     
     dogs = Dog.list(user_id)
     
